--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
 <h1>My Store</h1>
-<app-product-list></app-product-list>
+<nav>
+    <a routerLink="/store">Store</a>
+    <a routerLink="/cart">Cart</a>
+</nav>
+<router-outlet></router-outlet>
 <app-messages></app-messages>
