--- a/src/app/product-item-detail/product-item-detail.component.css
+++ b/src/app/product-item-detail/product-item-detail.component.css
@@ -1,6 +1,19 @@
-img {
-  border-radius: 10px;
+.product-image {      
+  list-style-type: none;
   width: 320px;
+/*  padding: 20px;
+  margin: 6px 6px;        */
+  border-radius: 10px;
+  border: 1px solid #33B5E5;
+} 
+
+.product-container {
+  margin-top: 64px;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
 }
 
 .select-input {
