--- a/src/app/product-item-detail/product-item-detail.component.html
+++ b/src/app/product-item-detail/product-item-detail.component.html
@@ -1,1 +1,17 @@
-<p>product-item-detail works!</p>
+<div class='detail-container'>
+    <img class='product-image' src={{product?.image_url}}>
+    <div class='product-detail box'>
+        <h3 class='product-detail title'>
+            {{product?.name}}
+        </h3>
+        <h4 class='product-detail price'>
+            {{product?.price}}
+        </h4>
+        <p class='product-detail description'>
+            {{product?.description}}
+        </p>
+        <input class='product-detail select-input' type='number' min=1 max=20 value=1 [(ngModel)]="selectInput">
+        <button (click)="addToCart()">Add to cart</button>
+        <button (click)="goBack()">Back</button>
+    </div>
+</div>
