--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
-<h1>My Store</h1>
-<nav>
-    <a routerLink="/store">Store</a>
-    <a routerLink="/cart">Cart</a>
-</nav>
+<h1>{{title}}
+    <app-nav-bar></app-nav-bar>
+</h1>
+
 <router-outlet></router-outlet>
 <app-messages></app-messages>
