Add style to store

--- a/src/app/product-list/product-list.component.css
+++ b/src/app/product-list/product-list.component.css
@@ -1,12 +1,4 @@
-.product-index {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  max-width: 1024px;
-  margin-bottom: 64px;
-}
-
 .product-container {
-  display: flex;
-  justify-content: center;
+  margin: 64px;
+  margin-top: 0;
 }
