--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,5 +1,3 @@
-<ul class='product-container'>
-    <li *ngFor="let product of products">
-        <app-product-item [product]="product"></app-product-item>
-    </li>
-</ul>
+<div class='product-container' fxLayout='row wrap' fxLayoutGap='50px' fxLayoutAlign="center center">
+    <app-product-item *ngFor='let product of products' [product]='product'></app-product-item>
+</div>
