--- a/src/app/product-item/product-item.component.css
+++ b/src/app/product-item/product-item.component.css
@@ -15,7 +15,18 @@
   justify-content: flex-start;
 }
 
+.product-detail {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.title, .price {
+  text-align: center;
+  margin-bottom: 0;
+}
+
 .select-input {
-  width: 108px; 
+  width: 48px; 
   margin-bottom: 8px;
 }
