--- a/src/app/product-item/product-item.component.html
+++ b/src/app/product-item/product-item.component.html
@@ -1,17 +1,15 @@
-<div *ngIf="product" class='product-container'>
+<div class='product-container'>
     <a routerLink="/store/{{product.id}}">
         <img class='product-image' src={{product.url}} (click)="onSelect()">
     </a>
     <div class='product-detail'>
-        <div class='product-detail title'>
+        <h2 class='product-detail title'>
             {{product.name}}
-        </div>
-        <div class='product-detail price'>
+        </h2>
+        <h3 class='product-detail price'>
             {{product.price}}
-        </div>
-        <div class='select-input'>
-            <input type='number' min=1 max=20 value=1 [(ngModel)]="selectInput">
-        </div>
+        </h3>
+        <input class='select-input' type='number' min=1 max=20 value=1 [(ngModel)]="selectInput">
         <button (click)="addToCart()">Add to cart</button>
     </div>
 </div>
