--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,5 +1,5 @@
-<div class="navigation">
-    <a routerLink="/store">Store</a>
+<div class='navigation'>
+    <a routerLink='/store'>Store </a>
     <p>|</p>
-    <a routerLink=" /cart">Cart</a>
+    <a routerLink='/cart'> Cart</a>
 </div>
