--- a/src/app/product-item-detail/product-item-detail.component.css
+++ b/src/app/product-item-detail/product-item-detail.component.css
@@ -1,8 +1,6 @@
 .product-image {      
   list-style-type: none;
   width: 320px;
-/*  padding: 20px;
-  margin: 6px 6px;        */
   border-radius: 10px;
   border: 1px solid #33B5E5;
 } 
@@ -16,8 +14,20 @@
   justify-content: flex-start;
 }
 
+.product-detail.box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-left: 40px;
+}
+
+.title, .price {
+  text-align: center;
+  margin-bottom: 0;
+}
+
 .select-input {
-  width: 108px; 
+  width: 64px; 
   margin-bottom: 8px;
 }
 
@@ -28,11 +38,7 @@
   margin-top: 64px;
 }
 
-.detail-item {
-  margin-left: 128px;
-  margin-right: 128px;
-}
-
 .back-link {
   margin-top: 8px;
+  color: cornflowerblue;
 }
