--- a/src/app/product-item/product-item.component.html
+++ b/src/app/product-item/product-item.component.html
@@ -10,6 +10,6 @@
             {{product.price}}
         </h3>
         <input class='select-input' type='number' min=1 max=20 value=1 [(ngModel)]="selectInput">
-        <button (click)="addToCart()">Add to cart</button>
+        <button class='product-detail btn' (click)="addToCart()">Add to cart</button>
     </div>
 </div>
