--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,9 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.btn {
+    color: white;
+    background-color: royalblue;
+    border-color: white;
+}
