Add submit form

--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,4 +1,4 @@
-<div class='cart-main' fxLayout='row'>
+<div class='cart-main' fxLayout='row' fxLayoutGap='100px' fxLayoutAlign="center center">
     <div class='cart-container' fxLayout='column'>
         <app-product-item-cart *ngFor='let c of cart | keyvalue' [product]='getProduct(c.key)' [quantity]='c.value'>
         </app-product-item-cart>
