Add order completed component + refactor

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,8 @@
 </h1>
 
 <router-outlet></router-outlet>
-<app-messages></app-messages>
+
+<!--
+    Show log messages on screen:
+    <app-messages></app-messages>
+-->
