--- a/src/app/product-item-detail/product-item-detail.component.html
+++ b/src/app/product-item-detail/product-item-detail.component.html
@@ -5,7 +5,7 @@
             {{product.name}}
         </h2>
         <h3 class='product-detail price'>
-            {{product.price}}
+            ${{product.price}}
         </h3>
         <p class='product-detail description'>
             {{product.description}}
