--- a/src/app/product-item/product-item.component.html
+++ b/src/app/product-item/product-item.component.html
@@ -7,7 +7,7 @@
             {{product.name}}
         </h2>
         <h3 class='product-detail price'>
-            {{product.price}}
+            ${{product.price}}
         </h3>
         <input class='select-input' type='number' min=1 max=20 value=1 [(ngModel)]="selectInput">
         <button class='product-detail btn' (click)="addToCart()">Add to cart</button>
