--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -6,11 +6,10 @@
     <textarea type='text' name='address' required minlength='6' [(ngModel)]='address'
         placeholder='Minimum 6 character'></textarea>
     <br>
-    <input type='text' name='credit_card' required minlength='16' maxlength='16' inputmode='numeric'
-        [(ngModel)]='credit_card' placeholder='16-digit number'>
+    <input type='text' name='credit_card' required minlength='16' inputmode='numeric' [(ngModel)]='credit_card'
+        placeholder='16-digit number'>
     <br>
     <p>We'll never share your payment details with anyone else.</p>
     <br>
-    <input routerLink="/order_completed" type='submit' [disabled]='form.invalid || isEmpty()' value='Submit'
-        class='btn btn-primary'>
+    <input type='submit' [disabled]='form.invalid || isEmpty()' value='Submit' class='btn btn-primary'>
 </form>
